ch15/lab/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ch15-lab-ingress
  namespace: kiamol-ch15-lab
  annotations:                          # path matching.
    nginx.ingress.kubernetes.io/limit-connections: "1"
    nginx.ingress.kubernetes.io/limit-rps: "1"
    kubernetes.io/ingress.class: "nginx-lab"
spec:
  rules:
  - host: "www.apod.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apod-web
            port:
              number: 80
  - host: "api.apod.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apod-api
            port:
              number: 80
